--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <h3 class="restaurant">Insert Restaurant Here</h3>
   </div>
 
+  <!-- <div id="ramen-detail">
+    <img class="detail-image" src="" alt="" />
+    <h2 class="name"></h2>
+    <h3 class="restaurant"></h3>
+  </div> -->
+
   <h3>Rating:</h3>
   <p>
     <span id='rating-display'>Insert rating here</span> / 10
